--- a/00_canvas/clickdraw.html
+++ b/00_canvas/clickdraw.html
@@ -25,7 +25,7 @@ K00 -- I See a Red Door...
     </canvas>
   </div>
   <button id="clear">Clear</button>
-  <button id="toggle">Toggle</button>
+  <button id="toggle">Click for Dots!</button>
 
   <script src="clickdraw.js"></script>
 </html>
