--- a/01_canvas/clickdraw.html
+++ b/01_canvas/clickdraw.html
@@ -1,8 +1,8 @@
 <!--
-Stefan Tan
+Team Jam Sandwich - Derek Song & Stefan Tan
 SoftDev2 pd8
-K00 -- I See a Red Door...
-2019-01-30
+K01 -- ...and I want to Paint It Better
+2019-01-31
 -->
 
 <!DOCTYPE html>
@@ -25,7 +25,7 @@ K00 -- I See a Red Door...
     </canvas>
   </div>
   <button id="clear">Clear</button>
-  <button id="toggle">Click for Dots!</button>
+  <button id="toggle">Toggle Boxes/Dots</button>
 
   <script src="clickdraw.js"></script>
 </html>
