worked on 02_canvas

--- a/02_canvas/index.html
+++ b/02_canvas/index.html
@@ -1,21 +1,21 @@
 <!--
-Stefan Tan
+Team jamSandwich: Derek Song & Stefan Tan
 SoftDev2 pd8
-K00 -- I See a Red Door...
-2019-01-30
+K02 -- Connecting the Dots
+2019-02 -01
 -->
 
 <!DOCTYPE html>
 <html lang="en">
 <html>
   <style>
-    #slate {border: 1px solid black }
+    #playground {border: 1px solid black }
   </style>
   <h1>Bonjour monde!</h1>
   <h2>Demo</h2>
   <head>
     <meta charset="utf-8"/>
-    <title></title> 
+    <title></title>
   </head>
   <body>
   </body>
@@ -26,5 +26,5 @@ K00 -- I See a Red Door...
   </div>
   <button id="clear">Clear</button>
 
-  <script src="clickdraw.js"></script>
+  <script src="dotconn.js"></script>
 </html>
