--- a/10_svg/index.html
+++ b/10_svg/index.html
@@ -1,8 +1,8 @@
 <!--
 Stefan Tan
 SoftDev2 pd8
-K09 -- Connect the Dots
-2019-03-12
+K10 -- Ask Circles [Change || Die]
+2019-03-13
 -->
 
 <!DOCTYPE html>
