--- a/13_svg/index.html
+++ b/13_svg/index.html
@@ -15,3 +15,9 @@ K13 -- Diving Deeper Into D3
   <script src="http://d3js.org/d3.v5.min.js"></script>
   <script src="index.js"></script>
 </html>
+
+<!--
+SVG: allows you to create more complex charts because of its more complex drawing features that aren’t limited to rectangular shapes, can be styled using CSS, but elements must be positioned relative to the top left corner of their containers
+
+Loading external data: We can import real data from an external file to make better use of the charting functionality. d3 makes it very convenient to use data in a .tsv format
+-->
