--- a/15_svg/index.html
+++ b/15_svg/index.html
@@ -1,8 +1,8 @@
 <!--
 Team 3D D3 -- Puneet Johal & Stefan Tan
 SoftDev2 pd8
-K13 -- Diving Deeper Into D3
-2019-03-19
+K15 -- Scattered
+2019-03-21
 -->
 
 <!DOCTYPE html>
@@ -10,6 +10,7 @@ K13 -- Diving Deeper Into D3
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <h1>Scatter Plot</h1>
   </head>
   <svg class="chart"></svg>
   <script src="http://d3js.org/d3.v5.min.js"></script>
