--- a/21_js-mfr/index.html
+++ b/21_js-mfr/index.html
@@ -1,11 +1,27 @@
+<!--
+Stefan Tan
+SoftDev2 pd8
+K21 -- Onions, Bell Peppers, and Celery, Oh My!
+2019-04-29
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Hello</title> 
+    <title>Neat Stats!</title>
   </head>
   <body>
+    <h1>INTERESTING STATS!</h1>
+    <h2>2006 - 2012 School Demographics and Accountability Snapshot Data</h2>
+    <p>The average of total enrollment from 2011-2012 is...</p>
+    <b id="avg"></b>
+    <p>The % of female of total enrollment from 2011-2012 is...</p>
+    <b id="fem"></b>
+    <p>The number of male enrolled from 2011-2012 is...</p>
+    <b id="mal"></b>
   </body>
+  <script src="http://d3js.org/d3.v5.min.js"></script>
   <script src="index.js"></script>
 </html>
